[package]
name = "plonky2_ux"
description = "ux gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/plonky2"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
log = "0.4.27"
num = { version = "0.4", default-features = false }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2" }

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2" }
